# pdrum

./: CMakeLists.txt  README.md
.github/workflows/: pr_check.yml  release.yml
Components/Knob/src/: KnobComponent.cpp
Components/Membrane/inc/: VibratingMembraneModel.h
Components/Membrane/src/: VibratingMembrane.cpp  VibratingMembraneModel.cpp
Components/Resonator/inc/: ModalResonator.h  ModalResonatorModel.h
Components/Resonator/src/: ModalResonator.cpp  ModalResonatorModel.cpp
PDrum/inc/: PDrum.h  PDrumEditor.h
PDrum/src/: PDrum.cpp  PDrumEditor.cpp
inc/Components/ADSR/: ADSRComponent.h
inc/Components/Membrane/: VibratingMembrane.h  VibratingMembraneModel.h
inc/Components/Resonator/: ModalResonator.h
inc/PDrum/: PDrum.h  PDrumEditor.h
src/: KnobComponent.cpp  ModalResonator.cpp  PDrum.cpp  PDrumEditor.cpp  VibratingMembrane.cpp  VibratingMembraneModel.cpp
